# ai-job-market-dashboard

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-pipeline.txt  requirements.txt  run_pipeline.py  scraper.py  spark_test.py
analytics/: load_metrics.py  salary_analysis.py  salary_insights.py  salary_segmentation.py  skill_salary_analysis.py
config/: settings.py
dashboards/: app.py
data/processed/: cleaned_jobs.csv
data/raw/: jobs.csv  jobs_api.csv  jobs_big.csv
docker/: Dockerfile.dashboard  Dockerfile.pipeline
docs/: generate_architecture.py
features/: job_title_features.py  location_features.py  skill_features.py
ingestion/: api_job_collector.py  ingest_jobs.py  scraper.py  selenium_scraper.py
output/: job_title_demand.csv  pipeline_status.json  salary_by_job_type.csv  salary_by_location.csv  salary_by_title.csv  salary_summary.csv  skill_demand.csv  skill_salary.csv
output/spark/: job_title_demand.csv  location_demand.csv  skill_demand.csv
pipeline/: analytics.py  clean.py  ingest.py  orchestrator.py  status.py  utils.py
processing/: data_simulator.py  pandas_cleaner.py  schema.py
schemas/: job_schema.py
spark/: job_market_analysis.py  spark_job_processor.py
