[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-job-market-dashboard"
version = "0.1.0"
description = "AI Job Market Intelligence Dashboard with Spark and Streamlit"
authors = [
    {name = "Ashutosh Jha"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "streamlit",
    "plotly",
    "pyspark"
]

[tool.setuptools]
packages = ["analytics", "dashboards", "processing", "spark", "features"]
